--- a/Exercicio_aula_02/index.html
+++ b/Exercicio_aula_02/index.html
@@ -31,9 +31,7 @@
         <br>me desenvolver como profissional na área.</i>
     </p>
     <hr>
-    <br>
     <h2>EXPERIÊNCIAS PROFISSIONAIS</h2>
-    <br>
     <hr>
     <table>
         <hr>
@@ -53,9 +51,7 @@
     <hr>
     <br>
     <hr>
-    <br>
     <h2>ESCOLARIDADE</h2>
-    <br>
     <hr>
     <table>
         <hr>
@@ -75,40 +71,15 @@
     <hr>
     <br>
     <hr>
-    <br>
     <h2>CURSOS</h2>
-    <br>
     <hr>
-    <table>
-        <hr>
-        <tr>
-            <th>Curso</th>
-            <th>Instituição</th>
-            <th>Duração</th>
-            <th>ano</th>
-        </tr>
-        <tr>
-            <td>Introdução ao Desenvolvimento JavaScript</td>
-            <td>Senac/RS</td>
-            <td>90h</td>
-            <td>2023</td>
-        </tr>
-        <tr>
-            <td>Desenvolvimento Back End</td>
-            <td>Senac/RS</td>
-            <td>90h</td>
-            <td>2023</td>
-        </tr>
-        <tr>
-            <td>Desenvolvimento Front End</td>
-            <td>Senac/RS</td>
-            <td>90h</td>
-            <td>2023</td>
-        </tr>
-    </table>
+    <ul>
+        <li>Introdução Desenvolvimento JavaScript</li>
+        <li>Desenvolvimento Back End</li>
+        <li>Desenvolvimento Front End (em andamento)</li>
+    </ul>
     <hr>
     <br>
-    <hr>
     <footer>
         <hr>
         <h2>CONTATO</h2>
