--- a/Front End/Exercicio_aula_02/index.html
+++ b/Front End/Exercicio_aula_02/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,500&display=swap" rel="stylesheet">
     <title>Currículo Jéssica Schmidt</title>
 </head>
-    
+
 <body>
     <!-- No exercício de hoje você deve criar uma página html com informações sobre você, semelhante a um currículo. A página deve conter:
     Um título que deve ser o seu nome
@@ -20,80 +21,91 @@
     Uma lista com cursos e/ou certificados
     Um formulário de contato
      -->
-     <div class="container">
-     <h1>Jéssica Morgana Schmidt Gonçalves</h1>
-     <img
-        src="foto/foto.jpg"
-        alt="Foto"
-        width="200"
-        />
-    <p class="descricao"><i>Sou uma pessoa que ama aprender,
-        <br>estou sempre em busca de ampliar meus horizontes e adquirir novos conhecimentos.
-        <br>Tenho uma personalidade pró ativa, prezo pela organização e otimização de tarefas. 
-        <br>Neste momento estou migrando para área de tecnologia pois me encontrei na mesma e 
-        <br>estou em busca de uma oportunidade de aplicar meus conhecimentos e 
-        <br>me desenvolver como profissional na área.</i>
-    </p>
-    <hr>
-    <h2 class="tabela">EXPERIÊNCIAS PROFISSIONAIS</h2>
-    <hr>
-    <table>
+    <div class="container">
+        <div class="cabecalho">
+            <h1>Jéssica Morgana Schmidt Gonçalves</h1>
+            <img src="foto/foto.jpg" alt="Foto" width="200" />
+            <p class="descricao"><i>Sou uma pessoa que ama aprender,
+                    <br>estou sempre em busca de ampliar meus horizontes e adquirir novos conhecimentos.
+                    <br>Tenho uma personalidade pró ativa, prezo pela organização e otimização de tarefas.
+                    <br>Neste momento estou migrando para área de tecnologia pois me encontrei na mesma e
+                    <br>estou em busca de uma oportunidade de aplicar meus conhecimentos e
+                    <br>me desenvolver como profissional na área.</i>
+            </p>
+        </div>
+        <br>
         <hr>
-        <tr>
-            <th>Empresa</th> 
-            <th>Função</th> 
-            <th>Admissão</th> 
-            <th>Demissão</th>
-        </tr>
-        <tr>
-            <td>Schuck Escritório Contábil</td>
-            <td>Auxiliar Administrativo</td>
-            <td>16/08/2021</td>
-            <td>Atual</td>
-        </tr>
-    </table>
-    <hr>
-    <br>
-    <hr>
-    <h2 class="tabela">ESCOLARIDADE</h2>
-    <hr>
-    <table>
-        <hr>
-        <tr>
-            <th>Instituição</th>
-            <th>Curso</th>
-            <th>Situação</th>
-            <th>Conclusão</th>
-        </tr>
-        <tr>
-            <td>Centro Universitario SENAC</td>
-            <td>Analise e Desenvolvimento de Sistemas</td>
-            <td>Em Andamento</td>
-            <td>Dezembro/24</td>
-        </tr>
-    </table>
-    <hr>
-    <br>
-    <hr>
-    <h2 class="lista">CURSOS</h2>
-    <hr>
-    <ul>
-        <li>Introdução Desenvolvimento JavaScript</li>
-        <li>Desenvolvimento Back End</li>
-        <li>Desenvolvimento Front End (em andamento)</li>
-    </ul>
-    <hr>
-    <br>
-    <footer>
-        <hr>
-        <h2 class="contato">CONTATO</h2>
-        <hr>
-        <p><i><b>Telefone:</b> (51) 98274-0844
-            <br><b>Email: </b>jessyka_sl@hotmail.com
-            <br><b>LinkedIn: </b>https://www.linkedin.com/in/jessicaschmidtgoncalves
-        </i></p>
-        <hr>
-    </footer>
+        <div>
+            <hr>
+            <h2 class="tabela">EXPERIÊNCIAS PROFISSIONAIS</h2>
+            <hr>
+            <table>
+                <hr>
+                <tr>
+                    <th>Empresa</th>
+                    <th>Função</th>
+                    <th>Admissão</th>
+                    <th>Demissão</th>
+                </tr>
+                <tr>
+                    <td>Schuck Escritório Contábil</td>
+                    <td>Auxiliar Administrativo</td>
+                    <td>16/08/2021</td>
+                    <td>Atual</td>
+                </tr>
+            </table>
+            <hr>
+            <br>
+            <hr>
+        </div>
+        <div>
+            <h2 class="tabela">ESCOLARIDADE</h2>
+            <hr>
+            <table>
+                <hr>
+                <tr>
+                    <th>Instituição</th>
+                    <th>Curso</th>
+                    <th>Situação</th>
+                    <th>Conclusão</th>
+                </tr>
+                <tr>
+                    <td>Centro Universitario SENAC</td>
+                    <td>Analise e Desenvolvimento de Sistemas</td>
+                    <td>Em Andamento</td>
+                    <td>Dezembro/24</td>
+                </tr>
+            </table>    
+            <hr>
+            <br>
+            <hr>
+        </div>    
+        <div class="lista">
+            <h2 class="lista">CURSOS</h2>
+            <hr>
+            <hr>
+            <ul>
+                <li>Introdução Desenvolvimento JavaScript</li>
+                <li>Desenvolvimento Back End</li>
+                <li>Desenvolvimento Front End (em andamento)</li>
+            </ul>
+        
+            <hr>
+            <br>
+        </div>    
+        <div class="rodape">
+            <footer>
+                <hr>
+                <h2 class="contato">CONTATO</h2>
+                <hr>
+                <hr>
+                <p><i><b>Telefone:</b> (51) 98274-0844
+                        <br><b>Email: </b>jessyka_sl@hotmail.com
+                        <br><b>LinkedIn: </b>https://www.linkedin.com/in/jessicaschmidtgoncalves
+                    </i></p>
+                <hr>
+            </footer>
+        </div>
     </div>
 </body>
 
