--- a/Front End/Exercicio_aula_02/index.html
+++ b/Front End/Exercicio_aula_02/index.html
@@ -23,24 +23,21 @@
      -->
     <div class="container">
         <div class="cabecalho">
+            <button id="noturno">Modo Noturno</button>
             <h1>Jéssica Morgana Schmidt Gonçalves</h1>
             <img src="foto/foto.jpg" alt="Foto" width="200" />
-            <p class="descricao"><i>Sou uma pessoa que ama aprender,
+        </div>
+        <p id="descricao"><i>Sou uma pessoa que ama aprender,
                     <br>estou sempre em busca de ampliar meus horizontes e adquirir novos conhecimentos.
                     <br>Tenho uma personalidade pró ativa, prezo pela organização e otimização de tarefas.
                     <br>Neste momento estou migrando para área de tecnologia pois me encontrei na mesma e
                     <br>estou em busca de uma oportunidade de aplicar meus conhecimentos e
                     <br>me desenvolver como profissional na área.</i>
-            </p>
-        </div>
+        </p>
         <br>
-        <hr>
-        <div>
-            <hr>
-            <h2 class="tabela">EXPERIÊNCIAS PROFISSIONAIS</h2>
-            <hr>
-            <table>
-                <hr>
+        <h2>EXPERIÊNCIAS PROFISSIONAIS</h2>
+        <div class="tabela">   
+        <table>
                 <tr>
                     <th>Empresa</th>
                     <th>Função</th>
@@ -53,16 +50,18 @@
                     <td>16/08/2021</td>
                     <td>Atual</td>
                 </tr>
+                <tr>
+                    <td>Spot Produções Ltda</td>
+                    <td>Coletor de Dados</td>
+                    <td>01/09/2018</td>
+                    <td>29/09/2019</td>
+                </tr>
             </table>
-            <hr>
             <br>
-            <hr>
         </div>
         <div>
-            <h2 class="tabela">ESCOLARIDADE</h2>
-            <hr>
-            <table>
-                <hr>
+            <h2>ESCOLARIDADE</h2>
+            <table class="tabela">
                 <tr>
                     <th>Instituição</th>
                     <th>Curso</th>
@@ -75,38 +74,36 @@
                     <td>Em Andamento</td>
                     <td>Dezembro/24</td>
                 </tr>
+                <tr>
+                    <td>Escola Estadual de Ensino Médio Caic Madezatti</td>
+                    <td>2º Grau</td>
+                    <td>Concluído</td>
+                    <td>Dezembro/2010</td>
+                </tr>                
             </table>    
-            <hr>
             <br>
-            <hr>
         </div>    
-        <div class="lista">
-            <h2 class="lista">CURSOS</h2>
-            <hr>
-            <hr>
+            <h2 id="curso">CURSOS</h2>
+            <div class="lista"></div>
             <ul>
                 <li>Introdução Desenvolvimento JavaScript</li>
                 <li>Desenvolvimento Back End</li>
                 <li>Desenvolvimento Front End (em andamento)</li>
             </ul>
-        
-            <hr>
-            <br>
-        </div>    
-        <div class="rodape">
-            <footer>
-                <hr>
-                <h2 class="contato">CONTATO</h2>
-                <hr>
-                <hr>
+            <br>    
+            <a target="_blank" class="nav-link"
+                 href="https://wa.me/5551982740844?text=Olá,%20que%20bom%20que%20visitou%20meu%20site,%20deixe%20um%20depoimento%20sobre%20mim%20para%20que%20eu%20possa%20incluir%20na%20sessão%20depoimento,%20assim%20estará%20me%20auxiliando%20nesta%20jornada%20de%20aprendizado%20e%20crescimento.">
+                <img class="Whats" src="foto/whatsapp.png" alt="logo_WattsApp" />
+             </a>
+                <h2 id="contato">CONTATO</h2>
+                <footer>
                 <p><i><b>Telefone:</b> (51) 98274-0844
                         <br><b>Email: </b>jessyka_sl@hotmail.com
                         <br><b>LinkedIn: </b>https://www.linkedin.com/in/jessicaschmidtgoncalves
                     </i></p>
-                <hr>
-            </footer>
-        </div>
+                </footer>
     </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
