modo noturno ok

--- a/Front End/Exercicio_aula_02/index.html
+++ b/Front End/Exercicio_aula_02/index.html
@@ -21,9 +21,12 @@
     Uma lista com cursos e/ou certificados
     Um formulário de contato
      -->
+    <button id="on">🌓</button>
     <div class="container">
         <div class="cabecalho">
-            <button id="noturno">Modo Noturno</button>
+
+            
+            
             <h1>Jéssica Morgana Schmidt Gonçalves</h1>
             <img src="foto/foto.jpg" alt="Foto" width="200" />
         </div>
@@ -59,10 +62,10 @@
             </table>
             <br>
         </div>
-        <div>
             <h2>ESCOLARIDADE</h2>
-            <table class="tabela">
-                <tr>
+            <div class="tabela">
+            <table>
+                <tr id="teste">
                     <th>Instituição</th>
                     <th>Curso</th>
                     <th>Situação</th>
